force-app/main/default/objects/Account/fields/ALM_CSM__c.field-meta.xml
<CustomField>
    <fullName>ALM_CSM__c</fullName>
    <label>ALM CSM</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts (ALM CSM)</relationshipLabel>
    <relationshipName>ALM_CSM_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reportable mirror of the active "ALM CSM" account-team member, maintained by AccountTeamMemberTrigger. Read-only projection - AccountTeamMember remains the source of truth ChurnZero reads. Do not edit directly.</description>
</CustomField>