force-app/main/default/objects/Account/fields/EI_CSM__c.field-meta.xml
<CustomField>
    <fullName>EI_CSM__c</fullName>
    <label>E&amp;I CSM</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts (E&amp;I CSM)</relationshipLabel>
    <relationshipName>EI_CSM_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reportable mirror of the active "E&amp;I CSM" account-team member, maintained by AccountTeamMemberTrigger. Read-only projection - AccountTeamMember remains the source of truth ChurnZero reads. Do not edit directly.</description>
</CustomField>