force-app/main/default/objects/Account/fields/Firm_Active_Sub_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Active_Sub_Value_USD__c</fullName>
    <description>FSS rollup: sum USD(SBQQ__NetPrice__c) of active subs.</description>
    <label>Firm Active Sub Value (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>