force-app/main/default/objects/Account/fields/Firm_Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Firm_Active_Subscriptions__c</fullName>
    <description>FSS rollup: active SBQQ__Subscription__c count via Ultimate_Parent__c.</description>
    <label>Firm Active Subscriptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>