force-app/main/default/objects/Account/fields/Firm_Cancellation_Value_AllTime_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Cancellation_Value_AllTime_USD__c</fullName>
    <description>FSS rollup: sum USD(Amount) where Stage = Closed Won - Cancellation (negative), all time.</description>
    <label>Firm Cancel Value AllTime (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>