force-app/main/default/objects/Account/fields/Firm_Rollup_Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Firm_Rollup_Last_Refreshed__c</fullName>
    <description>FSS: last successful firm recompute timestamp (trust + drift monitor).</description>
    <label>Firm Rollup Last Refreshed</label>
    <type>DateTime</type>
</CustomField>