force-app/main/default/objects/Account/fields/Firm_Won_ACV_AllTime_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_ACV_AllTime_USD__c</fullName>
    <description>FSS: net annual contract value (USD) of won lines, all time. Σ OpportunityLineItem.Annual_Contract_Value__c (annual run-rate), net of cancellations.</description>
    <label>Firm Won ACV AllTime (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>