force-app/main/default/objects/Account/fields/Firm_Won_ACV_CFY_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_ACV_CFY_USD__c</fullName>
    <description>FSS: net won ACV (USD), CloseDate in current fiscal year.</description>
    <label>Firm Won ACV CFY (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>