force-app/main/default/objects/Account/fields/Firm_Won_ACV_PFY_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_ACV_PFY_USD__c</fullName>
    <description>FSS: net won ACV (USD), CloseDate in prior fiscal year.</description>
    <label>Firm Won ACV PFY (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>