force-app/main/default/objects/Account/fields/Firm_Won_ACV_T12M_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_ACV_T12M_USD__c</fullName>
    <description>FSS: net won ACV (USD), CloseDate >= TODAY-12 months.</description>
    <label>Firm Won ACV T12M (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>