force-app/main/default/objects/Account/fields/Firm_Won_Count_AllTime__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_Count_AllTime__c</fullName>
    <description>FSS rollup: count where Stage = Closed Won, all time.</description>
    <label>Firm Won Count AllTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>