force-app/main/default/objects/Account/fields/Firm_Won_Count_CFY__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_Count_CFY__c</fullName>
    <description>FSS rollup: Closed Won count, CloseDate in current fiscal year.</description>
    <label>Firm Won Count CFY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>