force-app/main/default/objects/Account/fields/Firm_Won_Count_PFY__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_Count_PFY__c</fullName>
    <description>FSS rollup: Closed Won count, CloseDate in prior fiscal year.</description>
    <label>Firm Won Count PFY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>