force-app/main/default/objects/Account/fields/Firm_Won_Count_T12M__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_Count_T12M__c</fullName>
    <description>FSS rollup: Closed Won count, CloseDate >= TODAY-12 months.</description>
    <label>Firm Won Count T12M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>