force-app/main/default/objects/Account/fields/Firm_Won_Value_AllTime_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_Value_AllTime_USD__c</fullName>
    <description>FSS rollup: sum USD(Amount) where Stage IN (Closed Won, Closed Won - Cancellation), all time. Net of cancellations. Number not Currency (USD in a GBP-record org).</description>
    <label>Firm Won Value AllTime (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>