force-app/main/default/objects/Account/fields/Firm_Won_Value_CFY_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_Value_CFY_USD__c</fullName>
    <description>FSS rollup: net USD won value, CloseDate in current fiscal year.</description>
    <label>Firm Won Value CFY (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>