force-app/main/default/objects/Account/fields/Firm_Won_Value_T12M_USD__c.field-meta.xml
<CustomField>
    <fullName>Firm_Won_Value_T12M_USD__c</fullName>
    <description>FSS rollup: net USD won value, CloseDate >= TODAY-12 months.</description>
    <label>Firm Won Value T12M (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>