force-app/main/default/objects/Account/fields/Industry_Category__c.field-meta.xml
<CustomField>
    <fullName>Industry_Category__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Industry_Category_Override__c)), 
    Industry_Category_Override__c, 
    IF(
        ISPICKVAL(Industry_ALM__c, &quot;Law Firm&quot;),
        IF(
            Number_of_Attorneys__c &gt;= 151, &quot;Large Law&quot;,
            IF(
                Number_of_Attorneys__c &gt;= 71, &quot;Mid-Market Law&quot;,
                IF(
                    Number_of_Attorneys__c &gt;= 6, &quot;SMB Law&quot;,
                    IF(
                        Number_of_Attorneys__c &lt;= 5, &quot;Solo Practitioner Law&quot;,
                        &quot;Law Firm - Other&quot;
                    )
                )
            )
        ),
        CASE(
            Industry_ALM__c,
            &quot;PS - Audit/Tax&quot;, &quot;Professional Services&quot;,
            &quot;Corp - Energy&quot;, &quot;Corporations&quot;,
            &quot;Corp - Auto, Boats, Planes&quot;, &quot;Corporations&quot;,
            &quot;PS - Alternative Dispute Resolution&quot;, &quot;Professional Services&quot;,
            &quot;Corp - Healthcare&quot;, &quot;Corporations&quot;,
            &quot;Corp - Technology&quot;, &quot;Corporations&quot;,
&quot;Corp - Legal Tech&quot;, &quot;Corporations&quot;,
&quot;Corp - Food &amp; Beverage&quot;, &quot;Corporations&quot;,
&quot;Corp - Media &amp; Communications&quot;, &quot;Corporations&quot;,
            &quot;Corp - Retail&quot;, &quot;Corporations&quot;,
&quot;Corp - Hospitality &amp; Travel&quot;, &quot;Corporations&quot;,
            &quot;PS - Consulting&quot;, &quot;Professional Services&quot;,
            &quot;FS - Banking&quot;, &quot;Financial Services&quot;,
            &quot;Corp - Pharmaceutical&quot;, &quot;Corporations&quot;,
            &quot;Corp - Real Estate&quot;, &quot;Corporations&quot;,
            &quot;FS - Wealth Management&quot;, &quot;Financial Services&quot;,
            &quot;Gov - Not-For-Profit &amp; Association&quot;, &quot;Government Agency&quot;,
            &quot;Gov - Federal Agency&quot;, &quot;Government Agency&quot;,
            &quot;Insurance - Carrier&quot;, &quot;Insurance&quot;,
&quot;Insurance - Health&quot;, &quot;Insurance&quot;,
&quot;Insurance - Agency&quot;, &quot;Insurance&quot;,
&quot;Insurance - Brokerage&quot;, &quot;Insurance&quot;,
            &quot;EDU - University (Non-Law School)&quot;, &quot;University (Non-Law School)&quot;,
&quot;EDU - Law School&quot;, &quot;Law School&quot;,
            &quot;Judiciary - Federal Court&quot;, &quot;Court&quot;,
&quot;Judiciary - State Court&quot;, &quot;Court&quot;,
&quot;Judiciary - DA Office&quot;, &quot;Court&quot;,
            &quot;PS - Legal Services&quot;, &quot;Professional Services&quot;,
            &quot;Gov - State Agency&quot;, &quot;Government Agency&quot;,
            &quot;EDU - Secondary or other school&quot;, &quot;University (Non-Law School)&quot;,
            &quot;PS - Recruiting&quot;, &quot;Professional Services&quot;,
            NULL
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALM Industry Category</label>
    <type>Text</type>
</CustomField>