force-app/main/default/objects/Account/fields/Match_Domain__c.field-meta.xml
<CustomField>
    <fullName>Match_Domain__c</fullName>
    <description>Indexed email/web domain key used by LeadMatchSelectService to resolve a lead to a Firm. Backfilled from Approved_Email_Domain__c, Website, and Groove domains.</description>
    <externalId>true</externalId>
    <label>Match Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>