force-app/main/default/objects/Account/fields/Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Match_Name__c</fullName>
    <description>Normalised firm name (lower-cased, punctuation and legal suffixes stripped) used alongside Match_Domain__c for name+website duplicate detection. Populated by MatchDomainBackfill.</description>
    <externalId>true</externalId>
    <label>Match Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>