force-app/main/default/objects/Account/fields/of_Attorneys__c.field-meta.xml
<CustomField>
    <fullName>of_Attorneys__c</fullName>
    <inlineHelpText>DEPRECATED 2026-06-19: use the Number of Attorneys field (Number_of_Attorneys__c). of_Attorneys__c is being retired - do not use for new data entry, automation, or reports.</inlineHelpText>
    <label>ALM # of Attorneys (DEPRECATED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>