force-app/main/default/objects/Account/fields/PI_CSM__c.field-meta.xml
<CustomField>
    <fullName>PI_CSM__c</fullName>
    <label>PI CSM</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Accounts (PI CSM)</relationshipLabel>
    <relationshipName>PI_CSM_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reportable mirror of the active "PI CSM" account-team member, maintained by AccountTeamMemberTrigger. Read-only projection - AccountTeamMember remains the source of truth ChurnZero reads. Do not edit directly.</description>
</CustomField>